# QA-Agent

./: .gitignore  CHANGES_MADE.md  CONFIDENCE_SCORING_GUIDE.md  CONFIDENCE_SCORING_README.md  DEBUG_INSTRUCTIONS.md  EXAMPLE_USAGE.md  FAILED_TEST_CASES_FIX.md  FINAL_FIX_COMPLETE.md  FINAL_SOLUTION.md  FIXES_APPLIED.md  FIX_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  INTEGRATION_EXAMPLE.py  PARSER_SOLUTION.md  QUICK_START.md  README.md  README_STRUCTURED_OUTPUT.md  SIMPLE_WORKING_INTEGRATION.py  START_HERE.md  STRUCTURED_OUTPUT_FINAL.md  STRUCTURED_OUTPUT_GUIDE.md  TERMINAL_OUTPUT_GUIDE.md  TROUBLESHOOTING.md  ai_setup.py  api_endpoints.json  broswer_use.py  demo_requirements.txt  kernel_live_view_url.txt  main.py  minimal_backend.py  multi_ai_qa_agent.py  new.py  onkernel_multi_ai_qa_agent.py  pyproject.toml  qa_agent_integration.py  qa_config.yaml  requirements-backend.txt  requirements.txt  simple_demo.py  standalone_backend.py  (+8 more)
frontend/: .gitignore  README.md  UI_ENHANCEMENTS.md  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  index.css  test_detail.md
qa_agent/: confidence_scorer.py  confident_browser_agent.py  main.py  task_confidence_checker.py
qa_agent/api/: main.py
qa_agent/core/: config.py  db.py  logging.py  queues.py  telemetry.py
qa_agent/demo/: browser_demo.py
qa_agent/friction/: __init__.py  heuristics.py  scoring.py
qa_agent/generation/: discovery.py  dsl.py  examples.py  executor.py  ranking.py  service.py
qa_agent/integration/: __init__.py  confidence_integration.py
qa_agent/kernel/: README.md  (+3 more)
(+38 files in other folders)
