[project]
name = "qa-agentv2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.16.5",
    "asyncpg>=0.30.0",
    "browser-use>=0.8.1",
    "fastapi>=0.117.1",
    "google-genai>=1.38.0",
    "google-generativeai>=0.8.5",
    "httpx>=0.28.1",
    "kernel>=0.11.2",
    "orjson>=3.11.3",
    "playwright>=1.55.0",
    "pydantic-settings>=2.11.0",
    "python-dotenv>=1.1.1",
    "redis>=6.4.0",
    "rq>=2.6.0",
    "schedule>=1.2.2",
    "sqlalchemy>=2.0.43",
    "sqlmodel>=0.0.25",
    "structlog>=25.4.0",
    "tenacity>=9.1.2",
    "uvicorn[standard]>=0.37.0",
]

[dependency-groups]
dev = [
    "httpx[http2]>=0.28.1",
    "mypy>=1.18.2",
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "ruff>=0.13.1",
]
